# EXTRATOR

./: .dockerignore  .env.example  Dockerfile  README.md  extrator.py  pyproject.toml  requirements.txt
