[tool.poetry]
name = "extrator-de-rodadas"
version = "0.1.0"
description = "A project for extracting game rounds and processing results."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
playwright = "^1.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"